refactor(minor fixes in client): movie.component
n

--- a/client/src/app/movie/movie.component.html
+++ b/client/src/app/movie/movie.component.html
@@ -1,8 +1,6 @@
 <div class="card">
-  <h5>
-    {{movie.film}}
-    {{movie.genre}}
-    {{movie.lead_studio}}
-    {{movie.year}}
-  </h5>
+  <h3 class="card-title">{{movie.film}}</h3>
+  <p class="card-content">{{movie.genre}}</p>
+  <p class="card-content">{{movie.lead_studio}}</p>
+  <p class="card-content"> {{movie.year}}</p>
 </div>
