--- a/client/src/app/movie/movie.component.css
+++ b/client/src/app/movie/movie.component.css
@@ -1,9 +1,9 @@
 .card{
-  max-width: 50%;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  box-shadow: 1px 1px 5px;
+  max-width: 50%;;
+  box-shadow: 1px 1px 7px;
   margin: 1.5em auto;
+  text-align: center;
+  padding: 5px;
+  background-color: whitesmoke;
 }
 
